results/SVCOMP/specgen/log-putfield_getfield1-2024_02_29_08_45_43.txt
class A {
  public /*@ spec_public @*/ int i;
}
;

class putfield_getfield1 {
  //@ ensures \result <==> a.i == 999;
  public static boolean f() {
    A a = new A();
    a.i = 999;
    return 999 == a.i;
  }
}
/home/max/Documents/JMLGPT/tmp/putfield_getfield1.java:7: error: cannot find symbol
  //@ ensures \result <==> a.i == 999;
                           ^
  symbol:   variable a
  location: class putfield_getfield1
1 error

class A {
  public /*@ spec_public @*/ int i;
}
;

class putfield_getfield1 {
  //@ ensures \result <==> a.i == 999;
  public static boolean f() {
    A a = new A();
    a.i = 999;
    return 999 == a.i;
  }
}
/home/max/Documents/JMLGPT/tmp/putfield_getfield1.java:7: error: cannot find symbol
  //@ ensures \result <==> a.i == 999;
                           ^
  symbol:   variable a
  location: class putfield_getfield1
1 error

class A {
  public /*@ spec_public @*/ int i;
}
;

class putfield_getfield1 {
  //@ ensures \result <==> obj.i == 999;
  public static boolean f() {
    A obj = new A();
    obj.i = 999;
    return 999 == obj.i;
  }
}
/home/max/Documents/JMLGPT/tmp/putfield_getfield1.java:7: error: cannot find symbol
  //@ ensures \result <==> obj.i == 999;
                           ^
  symbol:   variable obj
  location: class putfield_getfield1
1 error

class A {
  public /*@ spec_public @*/ int i;
}
;

class putfield_getfield1 {
  //@ ensures \result <==> a.i == 999;
  public static boolean f() {
    A a = new A();
    a.i = 999;
    return 999 == a.i;
  }
}
/home/max/Documents/JMLGPT/tmp/putfield_getfield1.java:7: error: cannot find symbol
  //@ ensures \result <==> a.i == 999;
                           ^
  symbol:   variable a
  location: class putfield_getfield1
1 error

class A {
  public /*@ spec_public @*/ int i;
}
;

class putfield_getfield1 {
  //@ ensures \result <==> obj.i == 999;
  public static boolean f() {
    A obj = new A();
    obj.i = 999;
    return 999 == obj.i;
  }
}
/home/max/Documents/JMLGPT/tmp/putfield_getfield1.java:7: error: cannot find symbol
  //@ ensures \result <==> obj.i == 999;
                           ^
  symbol:   variable obj
  location: class putfield_getfield1
1 error

class A {
  public /*@ spec_public @*/ int i;
}
;

class putfield_getfield1 {
  //@ ensures \result <==> a.i == 999;
  public static boolean f() {
    A a = new A();
    a.i = 999;
    return 999 == a.i;
  }
}
/home/max/Documents/JMLGPT/tmp/putfield_getfield1.java:7: error: cannot find symbol
  //@ ensures \result <==> a.i == 999;
                           ^
  symbol:   variable a
  location: class putfield_getfield1
1 error

class A {
  public /*@ spec_public @*/ int i;
}
;

class putfield_getfield1 {
  //@ ensures \result <==> obj.i == 999;
  public static boolean f() {
    A obj = new A();
    obj.i = 999;
    return 999 == obj.i;
  }
}
/home/max/Documents/JMLGPT/tmp/putfield_getfield1.java:7: error: cannot find symbol
  //@ ensures \result <==> obj.i == 999;
                           ^
  symbol:   variable obj
  location: class putfield_getfield1
1 error

class A {
  public /*@ spec_public @*/ int i;
}
;

class putfield_getfield1 {
  //@ ensures \result <==> a.i == 999;
  public static boolean f() {
    A a = new A();
    a.i = 999;
    return 999 == a.i;
  }
}
/home/max/Documents/JMLGPT/tmp/putfield_getfield1.java:7: error: cannot find symbol
  //@ ensures \result <==> a.i == 999;
                           ^
  symbol:   variable a
  location: class putfield_getfield1
1 error

class A {
  public /*@ spec_public @*/ int i;
}
;

class putfield_getfield1 {
  //@ ensures \result <==> obj.i == 999;
  public static boolean f() {
    A obj = new A();
    obj.i = 999;
    return 999 == obj.i;
  }
}
/home/max/Documents/JMLGPT/tmp/putfield_getfield1.java:7: error: cannot find symbol
  //@ ensures \result <==> obj.i == 999;
                           ^
  symbol:   variable obj
  location: class putfield_getfield1
1 error

class A {
  public /*@ spec_public @*/ int i;
}
;

class putfield_getfield1 {
  //@ ensures \result <==> a.i == 999;
  public static boolean f() {
    A a = new A();
    a.i = 999;
    return 999 == a.i;
  }
}
/home/max/Documents/JMLGPT/tmp/putfield_getfield1.java:7: error: cannot find symbol
  //@ ensures \result <==> a.i == 999;
                           ^
  symbol:   variable a
  location: class putfield_getfield1
1 error

class A {
  public /*@ spec_public @*/ int i;
}
;

class putfield_getfield1 {
  //@ ensures \result <==> a.i == 999;  
  public static boolean f() {
    A a = new A();
    a.i = 999;
    return 999 == a.i;
  }
}

/home/max/Documents/JMLGPT/tmp/putfield_getfield1.java:7: error: cannot find symbol
  //@ ensures \result <==> a.i == 999;  
                           ^
  symbol:   variable a
  location: class putfield_getfield1
1 error

class A {
  public /*@ spec_public @*/ int i;
}
;

class putfield_getfield1 {
 
  public static boolean f() {
    A a = new A();
    a.i = 999;
    return 999 == a.i;
  }
}


